--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ footer{
 
 <textarea id="outputText" class="output" placeholder="Humanized text will appear here..."></textarea>
 
-<footer>Built with ❤️ by Sachin</footer>
+<footer>Built with ❤️ by Sachin Adi</footer>
 
 </div>
 
